new design for staging/marvelad.css
/* ... */
/* --------- end Nitesh ---------- */


/* ========================================================================== */


/* --------- start Sanket ---------- */


/* ================================= main =================================  */

.footer-top ul li .fa {
    width: 15px;
}

.main-container {
    margin-top: 0px;
    margin-bottom: 0px;
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    transition: all ease .25s;
}

#main-container-id {
    background-color: white;
}

.main-container.open-hamburger {
    transform: translateX(70vw);
}

.inner-container {
    margin-left: auto;
    margin-right: auto;
    width: 94%;
}

.mobile-inner-container {
    margin-left: auto;
    margin-right: auto;
    width: 94%;
}

.section-title-mobile {
    font-weight: 600;
    font-size: 16px;
    color: white;
    margin-bottom: 1rem;
    margin-top: 10px;
    background-color: #004b8c;
    width: 100%;
    padding: 0.5rem;
}

.section-title-mobile i {
    font-size: 20px;
}

.section-title-desktop {
    display: none;
}


/* ================================= video-story ================================= */

.video-story {
    background-color: #004b8c;
    margin-bottom: 10px;
}

.video-story .v-views .fa {
    color: #1291ff;
}

.video-box {
    flex-direction: column;
}

.video-main-desktop {
    width: 106.2%;
    right: 3.1%;
    height: 250px;
    position: relative;
}

.video-item-card {
    border-top: 1px solid #007ea8;
}

.other-v-story-container .video-item-card:last-child {
    padding-bottom: 0px;
}

.v-image {
    display: inline-block;
    width: 44%;
    height: 85px;
}


/* .main-video{
 *     z-index: 2;
 *         position: relative;
 *         } */

.video-item-info {
    width: 50%;
    color: white;
}

.video-item-info .v-time {
    color: white;
}

.video-item-info .v-views {
    color: white;
}

.main-video.video-item-info {
    width: 65%;
}

.main-video .news-title {
    font-size: 18px !important;
}

.main-video .news-description {
    font-size: 13px;
}

.video-story .news-title {
    color: white;
}

.video-story .news-description {
    -webkit-line-clamp: 3;
    color: white;
}

.v-time {
    font-size: 10px;
    line-height: 1.2;
    color: #7b7a7a;
    display: block;
}

.v-views {
    font-size: 10px;
    line-height: 1.2;
    color: #7b7a7a;
    display: inline-block;
}

.social-icons {
    display: none;
}

.video-overlay {
    height: 100%;
    z-index: 1;
    position: relative;
    background-color: #00000060;
    bottom: 100%;
}

.video-overlay.b-0 {
    background-color: #00000000;
    bottom: 200%;
}

.upnext {
    font-weight: 600;
    font-size: 14px;
    color: white;
}

.play-icon {
    width: 15%;
}

.video-main-desktop .play-icon {
    width: 18%;
}

.play-icon-white {
    width: 15%;
}

.categories .news-title {
    color: #05243f;
}


/* ================================= entertainment ================================= */

.entertainment .news-title {
    color: #05243f;
    font-size: 14px;
}

.entertainment-container {
    display: block;
}

#entertainment-carousel {
    display: block;
    margin-left: auto;
    margin-right: auto;
    background-color: black;
    /* width: 100%; */
}

.carousel-image {
    height: 180px;
}

.entertainment-list-box {
    margin: 0%;
    width: 100%;
    background-color: white;
}

.entertainment-list {
    margin: 3px 0px;
    cursor: pointer;
    background-color: white;
    color: black;
    padding: 2px 0px;
    border-bottom: 1px solid gainsboro;
    font-size: 0.7em;
}

.entertainment-list:last-child {
    border-bottom: none;
}

ul.list-unstyled {
    margin: 10px 0px;
}

.ad-block-desktop {
    display: none;
}

.entertainment .news-description span {
    display: inline-block;
    margin: 2px 10px 2px 0px;
}

.ad-block {
    background-color: gray;
    height: 250px;
    width: 100%;
    max-width: 320px;
}

ol.v-story-indicators li.triangle.active {
    opacity: 1;
    background-color: #e75480;
}

ol.v-story-indicators li.triangle {
    margin: 0px 5px;
    display: block;
    width: 10px;
    max-width: 10px;
    height: 10px;
    border-radius: 50%;
    background-color: #004b8c;
}

.carousel-indicators .dot-indicators {
    margin: 0px 5px;
    display: block;
    width: 10px;
    max-width: 10px;
    height: 10px;
    border-radius: 50%;
    background-color: #004b8c;
}

.carousel-indicators .dot-indicators.active {
    opacity: 1;
    background-color: #e75480;
}


/* ================================= footer-top ================================= */

.footer-top {
    background-color: #e3e3e3;
}

.footer-menu ul {
    font-size: 16px;
    color: #5d5d60;
    list-style-type: none;
}

.footer-top li {
    margin: 0.5rem 0.2rem;
}

.footer-top li span {
    margin: 0px 0.5rem;
}


/* ================================= footer-bottom =================================  */

.footer-bottom {
    background-color: #e3e3e3;
}

.footer-links-div {
    width: 100%;
}

.footer-links-div ul li {
    color: #5d5d60;
    font-size: 14px !important;
}

.footer-links-div ul li::before {
    display: inline-block;
    content: '';
    height: 0.25rem;
    width: 0.25rem;
    margin-right: 0.2rem;
    margin-bottom: 0.1rem;
    background-color: #5d5d60;
}


/* ================================= footer copyright ================================= */

.copyright {
    background-color: #004b8c !important;
}

.sakal-logo-bottom-footer {
    background-image: url(https://sankey-bucket.s3-ap-southeast-1.amazonaws.com/logo3.png);
    background-repeat: no-repeat;
    background-position: center;
    background-size: 240px;
    width: 150px;
    height: 45px;
    margin-top: 17px;
    margin-bottom: 16px;
}

.copyright-text.news-description {
    color: white;
    font-size: 14px !important;
}
/* ... */

